--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -8,10 +8,13 @@ Username_Kafka=cd9ku08u
 PasswordK_Kafka=3lmX3-Ixt9Wdq6sZ-Mr5EQoI49FLifEf
 Brokers_Kafka=sulky-01.srvs.cloudkafka.com:9094,sulky-02.srvs.cloudkafka.com:9094,sulky-03.srvs.cloudkafka.com:9094
 TopicName_Kafka=cd9ku08u-default
-spring.datasource.url=jdbc:mysql://remotemysql.com:3306/jgp6y3rjWo
-spring.datasource.username=jgp6y3rjWo
-spring.datasource.password=vhbjNSfOlL
-spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://remotemysql.com:3306/jgp6y3rjWo
+#spring.datasource.username=jgp6y3rjWo
+#spring.datasource.password=vhbjNSfOlL
+#spring.jpa.hibernate.ddl-auto=update
 ## Hibernate Properties
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
+# Using JdbcTemplate
+spring.datasource.url = jdbc:mysql://localhost:3306/codereview
+spring.datasource.username = root
+spring.datasource.password = root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
